addons/kyverno/policies/betting-source_of_funds_checks-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: betting-source_of_funds_checks
  annotations:
    rulehub.id: betting.source_of_funds_checks
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: betting.source_of_funds_checks: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
